--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -27,13 +27,11 @@
   }
 
   p,
-  h2,
   h3 {
     orphans: 3;
     widows: 3;
   }
 
-  h2,
   h3 {
     page-break-after: avoid;
   }
@@ -80,28 +78,11 @@ p,
   margin-bottom: 1.3rem;
 }
 
-h1,
-.retro-h1,
-h2,
-.retro-h2,
 h3,
-.retro-h3,
-h4,
-.retro-h4 {
+.retro-h3 {
   margin: 1.414rem 0 .5rem;
   font-weight: inherit;
   line-height: 1.42;
-}
-
-h1,
-.retro-h1 {
-  margin-top: 0;
-  font-size: 3.998rem;
-}
-
-h2,
-.retro-h2 {
-  font-size: 2.827rem;
 }
 
 h3,
@@ -109,42 +90,14 @@ h3,
   font-size: 1.999rem;
 }
 
-h4,
-.retro-h4 {
-  font-size: 1.414rem;
-}
-
 h5,
 .retro-h5 {
   font-size: 1.121rem;
 }
 
-h6,
-.retro-h6 {
-  font-size: .88rem;
-}
-
-small,
-.retro-small {
-  font-size: .707em;
-}
-
-/* https://github.com/mrmrs/fluidity */
-
-img,
-canvas,
-iframe,
-video,
-svg,
-select,
-textarea {
-  max-width: 100%;
-}
-
 html,
 body {
   background-color: #222;
-  min-height: 100%;
 }
 
 html {
@@ -155,7 +108,40 @@ body {
   color: #fafafa;
   font-family: "Courier New";
   line-height: 1.45;
-  margin: 6rem auto 1rem;
-  max-width: 48rem;
-  padding: .25rem;
 }
+
+.mainbody{
+    position: relative;
+    height: 90vh;
+    margin: auto;
+    max-width: 48rem;
+    padding: 0.25rem;
+}
+
+.vertically{
+    
+    max-height: 90vh;
+    padding: 0.25rem;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+hr {
+    border-width: 1px;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .flex-container > div {
+    flex: 25%;
+    max-width: 25%;
+    text-align: center;
+    line-height: 75px;
+    font-size: 36px;
+  }
